# claude-code-sample-project

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.claude_workflow/: design.md  requirements.md  tasks.md
.devcontainer/: devcontainer.json
src/: __init__.py  main.py  models.py  slack_bot.py  utils.py
src/routes/: __init__.py
tests/: __init__.py  conftest.py  test_items.py  test_main.py  test_utils.py
